rust/src/nasl/syntax/parser/snapshots/scannerlib__nasl__syntax__parser__tests__wrong_assignment.snap
---
source: src/nasl/syntax/parser/tests.rs
expression: "crate :: nasl :: syntax :: parser :: tests ::\nparse_program_err(stringify! (wrong_assignment), \"a = \")"
---
error: Expected expression
  ┌─ wrong_assignment:1:1
  │
1 │ a = 
  │ ^^^ Expected expression
