rust/src/nasl/syntax/parser/snapshots/scannerlib__nasl__syntax__parser__tests__wrong_keyword_assignment.snap
---
source: src/nasl/syntax/parser/tests.rs
expression: "crate :: nasl :: syntax :: parser :: tests ::\nparse_program_err(stringify! (wrong_keyword_assignment), \"a = for;\")"
---
error: Expected expression
  ┌─ wrong_keyword_assignment:1:1
  │
1 │ a = for;
  │ ^^^ Expected expression
